o Still working on integration test. Right now it's not finding resources in the local classpath entries.